Fix ol alignment

--- a/content/themes/handbook/sass/layout/_typography.scss
+++ b/content/themes/handbook/sass/layout/_typography.scss
@@ -180,7 +180,7 @@ ul {
 }
 
 ol {
-  padding-left: 2.5rem;
+  padding-left: 3.4rem;
 }
 
 ol,
